--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,9 @@ Flask-Login==0.4.0
 
 # File Storage
 lockfile==0.12.2 # For local storage
-apache-libcloud==2.3.0
+# apache-libcloud==2.3.0
+# Branch that contains a fix for Azure stream blob upload - use until a fix for https://issues.apache.org/jira/projects/LIBCLOUD/issues/LIBCLOUD-993 is published
+https://github.com/jmspring/libcloud/archive/issue_933_azure_crash_v2.3.0-base.zip
 
 # OAuth
 
