--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,17 @@ env:
   global:
      - OK_ENV=test
   matrix:
-    - USE_DOCKER=1
-    - USE_NATIVE=1
+    - SETUP=docker
+    - SETUP=native
 install:
-  - if [ -n "$USE_DOCKER" ]; then make docker-build; fi
-  - if [ -n "$USE_NATIVE" ]; then pip install -r requirements.txt; fi
-  - if [ -n "$USE_NATIVE" ]; then pip install pytest-timeout python-coveralls; fi
+  - if [ "$SETUP" = "docker" ]; then make docker-build; fi
+  - if [ "$SETUP" = "native" ]; then pip install -r requirements.txt; fi
+  - if [ "$SETUP" = "native" ]; then pip install pytest-timeout python-coveralls; fi
 script:
-  - if [ -n "$USE_DOCKER" ]; then docker run -it cs61a/ok-server py.test tests/; fi
-  - if [ -n "$USE_NATIVE" ]; then py.test --cov-report term-missing --cov=server tests/  --ignore tests/test_web.py --timeout=30; fi
+  - if [ "$SETUP" = "docker" ]; then docker run -it cs61a/ok-server py.test tests/; fi
+  - if [ "$SETUP" = "native" ]; then py.test --cov-report term-missing --cov=server tests/  --ignore tests/test_web.py --timeout=30; fi
 after_success:
-  - if [ -n "$USE_NATIVE" ]; then echo "eventually should run coveralls here"; fi
+  - if [ "$SETUP" = "native" ]; then echo "eventually should run coveralls here"; fi
 notifications:
   email: false
   slack:
