--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,8 @@ oauthlib==2.0.2
 # OAuthlib version that logs errors - use until Flask-OAuthlib > 0.9.3 is published
 https://github.com/lepture/flask-oauthlib/archive/d62bf665fa2a4ab71327cd665334fdec25ade116.zip
 
+pyjwt==1.6.1
+
 Flask-WTF==0.14.2
 Flask-RESTful==0.3.5
 Flask-Testing>=0.5.0,<1.0
