--- a/azure/paas/webapp.deploy.json
+++ b/azure/paas/webapp.deploy.json
@@ -167,7 +167,7 @@
                               "DOCKER_REGISTRY_SERVER_URL": "[parameters('dockerRegistryUrl')]",
                               "DOCKER_REGISTRY_SERVER_USERNAME": "[parameters('dockerRegistryUsername')]", "DOCKER_REGISTRY_SERVER_PASSWORD": "[parameters('dockerRegistryPassword')]",
                               "DOCKER_CUSTOM_IMAGE_NAME":"[concat(parameters('dockerRegistryUrl'),'/',parameters('dockerImageName'),':',parameters('dockerImageTag'))]",
-                              "DOCKER_CUSTOM_IMAGE_RUN_COMMAND":"",
+                              "DOCKER_CUSTOM_IMAGE_RUN_COMMAND":"[parameters('dockerStartupCommand')]",
                               "WEBSITES_ENABLE_APP_SERVICE_STORAGE": "false",
                               "DATABASE_URL":"[concat('mysql://',parameters('mySqlUsername'),'%40',parameters('mySQLServerName'),':',parameters('mysqlPassword'),'@',parameters('mySQLServerName'),'.mysql.database.azure.com:3306/ok?')]",
                               "DB_ROW_FORMAT":"default",
