add default values

--- a/azure/paas/webapp.deploy.json
+++ b/azure/paas/webapp.deploy.json
@@ -57,10 +57,12 @@
       "type": "string"
      },
      "azureAdAppID":{
+       "defaultValue": "",
       "type": "string"
   
     },
     "azureAdAppSecret":{
+      "defaultValue": "",
       "type": "string"
           
     },
