--- a/azure/paas/webapp.deploy.json
+++ b/azure/paas/webapp.deploy.json
@@ -66,6 +66,11 @@
       "type": "string"
           
     },
+    "azureAdTenantId":{
+      "defaultValue": "",
+      "type": "string"
+
+    },
       "mysqlUsername": {
         "type": "string",
         "minLength": 1,
@@ -98,13 +103,6 @@
             }
           
       },
-      "sendgridSmtpServer": {
-              "type": "string",
-              "metadata": {
-                "description": "SendGrid Server"
-              }
-            
-        },
           "sendgridAccountName": {
                   "type": "string",
                   "metadata": {
@@ -208,6 +206,7 @@
                                "APPLICATION_INSIGHTS_KEY":"[parameters('applicationInsightsKey')]",
                                "MICROSOFT_APP_SECRET":"[parameters('azureAdAppSecret')]",
                                "MICROSOFT_APP_ID":"[parameters('azureAdAppId')]",
+                               "MICROSOFT_TENANT_ID":"[parameters('azureAdTenantId')]",
                                "SECRET_KEY":"[parameters('SecretKey')]"
                             }
                         },
