--- a/azure/paas/webapp.deploy.json
+++ b/azure/paas/webapp.deploy.json
@@ -67,7 +67,7 @@
     },
     "azureAdAppSecret":{
       "defaultValue": "",
-      "type": "string"
+      "type": "securestring"
           
     },
     "azureAdTenantId":{
@@ -94,19 +94,12 @@
           "description": "Unique SQL Server Name"
         }
       },
-      "redisFQDN": {
+      "redisURL": {
         "type": "string",
         "metadata": {
-          "description": "redis FQDN"
+          "description": "redis URL"
         }
     },
-    "redisPassword": {
-            "type": "securestring",
-            "metadata": {
-              "description": "redis  password"
-            }
-          
-      },
           "sendgridAccountName": {
                   "type": "string",
                   "metadata": {
@@ -191,14 +184,14 @@
                             },
                             "properties": {
                               "DOCKER_REGISTRY_SERVER_URL": "[parameters('dockerRegistryUrl')]",
-                              "DOCKER_REGISTRY_SERVER_USERNAME": "[parameters('dockerRegistryUsername')]", "DOCKER_REGISTRY_SERVER_PASSWORD": "[parameters('dockerRegistryPassword')]",
+                              "DOCKER_REGISTRY_SERVER_USERNAME": "[parameters('dockerRegistryUsername')]",
+                              "DOCKER_REGISTRY_SERVER_PASSWORD": "[parameters('dockerRegistryPassword')]",
                               "DOCKER_CUSTOM_IMAGE_NAME":"[concat(parameters('dockerRegistryUrl'),'/',parameters('dockerImageName'),':',parameters('dockerImageTag'))]",
                               "DOCKER_CUSTOM_IMAGE_RUN_COMMAND":"[parameters('dockerStartupCommand')]",
                               "WEBSITES_ENABLE_APP_SERVICE_STORAGE": "false",
                               "DATABASE_URL":"[concat('mysql://',parameters('mySqlUsername'),'%40',parameters('mySQLServerName'),':',parameters('mysqlPassword'),'@',parameters('mySQLServerName'),'.mysql.database.azure.com:3306/ok?')]",
                               "DB_ROW_FORMAT":"default",
-                               "REDIS_HOST":"[parameters('redisFQDN')]",
-                               "REDIS_PASSWORD":"[parameters('redisPassword')]",
+                               "REDIS_URL":"[parameters('redisURL')]",
                                "STORAGE_PROVIDER":"AZURE_BLOBS",
                                "STORAGE_KEY":"[parameters('storageAccountName')]",
                                "STORAGE_SECRET":"[parameters('storageAccountKey')]",
